<resources>
    <string name="app_name">Tour Guide</string>
    <string name="location">Location</string>
    <string name="near_the_head_of_the_nile_river_delta_egypt_northeastern_africa">Near the head of the Nile River delta, Egypt; northeastern Africa</string>
    <string name="time_zone">Time Zone</string>
    <string name="_2_pm_cairo_time_noon_greenwich_mean_time_gmt">2 pm Cairo time = noon Greenwich Mean Time (GMT)</string>
    <string name="elevation">Elevation</string>
    <string name="_194_m_636_ft">194 m (636 ft)</string>
    <string name="latitude_and_longitude">Latitude and Longitude</string>
    <string name="_43_40_n_79_22_w">43°40\'N, 79°22\'W</string>
    <string name="climate">Climate</string>
    <string name="desert_climate_with_hot_summers_and_mild_winters_rain_is_rare_and_hamsin_dust_storms_can_occur_in_the_spring">Desert climate, with hot summers and mild winters; rain is rare, and hamsin dust storms can occur in the spring.</string>
    <string name="monetary_units">Monetary Units</string>
    <string name="egyptian_pounds">Egyptian pounds</string>
    <string name="pictures">Pictures</string>
    <string name="about">About</string>
    <string name="eltahrir">Eltahrir</string>
    <string name="alazhar">Alazhar</string>
    <string name="pyramids">The Pyramids</string>
    <string name="string1">LOCATION :\n near the head of the nile river delta egypt northeastern africa \n TIME ZONE :  \n 2 pm cairo time noon greenwich mean time gmt \n ELEVATION : \n  194 m 636 ft  LATITUDE AND LONGITUDE : \n  43 40 n 79 22 w  \n CLIMATE : \n desert climate with hot summers and mild winters rain is rare and hamsin_dust storms can occur in the spring \n MOUNTARY UNITS : \n egyptian pounds</string>
    <string name="string2">\n INTRODUCTION : \n Located on the banks of the Nile River, Cairo is Africa\'s largest city, as well as the largest city in the Arab world. In the course of its thousand-year history it has been the capital of the great Egyptian dynasties of the Middle Ages, a British colonial enclave, and a modern industrialized city</string>
    <string name="string3">(Arabic: ميدان التحرير)  English: (Liberation Square)   is a major public town square in Downtown Cairo, Egypt. The square has been the location and focus for political demonstrations in Cairo, most notably those that led to the 2011 Egyptian revolution and the resignation of President</string>
    <string name="string4">The mosque and university are named in honor of Fatima Az-Zahraa, the daughter of Muhammad, from whom the Fatimid Dynasty claimed descent. The mosque was built in two years beginning in 971 AD. The school of theology (madrassa) connected with it was founded in 988 as an Ismaili Shia school, but it later became a Sunni school, which it remains to this day. It claims to be the oldest Islamic university in the world</string>
    <string name="string5">The ancient Egyptians built Giza pyramids as tombs for the pharaohs and their queens. They believed that when a pharaoh died he became Osiris, the king of the dead. They believed that for the dead pharaoh to carry out his duties as king of the dead his ka. Then they mummified their bodies and keep things that they will need them in the afterlife. It Known as ‘mr’ or ‘mir’ by the Egyptians. It starts to build During the third and fourth dynasties of the Old Kingdom, more than 4,000 years later. There are many different shapes and sizes from before the beginning of the Old Kingdom to the end of the Middle Kingdom. It Built during a time when Egypt was one of the richest and most powerful civilizations in the world. there are about 100 pyramids have been discovered in Egypt.</string>
    <string name="alazhar">Alazhar</string>
    <string name="el_tahrir_square">El Tahrir Square</string>
    <string name="about_cairo">About Cairo</string>
    <string name="the_pyramids_of_giza">The Pyramids of Giza</string>
</resources>
