<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPlur"
                android:text=" About Cairo  "
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPlur"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/near_the_head_of_the_nile_river_delta_egypt_northeastern_africa"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/time_zone"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_pm_cairo_time_noon_greenwich_mean_time_gmt"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/elevation"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_194_m_636_ft"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/latitude_and_longitude"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_43_40_n_79_22_w"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/climate"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desert_climate_with_hot_summers_and_mild_winters_rain_is_rare_and_hamsin_dust_storms_can_occur_in_the_spring"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:text="@string/monetary_units"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/egyptian_pounds"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/map_of_cairo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@color/colorPlur"
                android:text=" Introduction "
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPlur"
                android:text="Located on the banks of the Nile River, Cairo is Africa's largest city, as well as the largest city in the Arab world. In the course of its thousand-year history it has been the capital of the great Egyptian dynasties of the Middle Ages, a British colonial enclave, and a modern industrialized city"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>